--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"                   : "document-alchemy-cli",
-  "version"                : "1.0.0",
+  "version"                : "1.0.2",
   "app-name"               : "document-alchemy",
   "published"              : "15 April 2016",
   "description"            : "Command-line interface to the DocumentAlchemy API.",
@@ -9,7 +9,7 @@
   "bugs"                   : "https://github.com/document-alchemy-cli/issues",
   "repository"             : { "type":"git", "url":"https://github.com/documentalchemy/document-alchemy-cli.git" },
   "license"                : "MIT",
-  "main"                   : "lib/da-cli.js",
+  "main"                   : "lib/index.js",
   "scripts"                : {"test": "make test" },
   "directories"            : { "lib":"lib", "bin":"bin", "doc":"docs" },
   "preferGlobal"           : true,
