--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name"                   : "document-alchemy-cli",
-  "version"                : "1.0.2",
+  "version"                : "1.0.3",
   "app-name"               : "document-alchemy",
-  "published"              : "15 April 2016",
+  "published"              : "17 April 2016",
   "description"            : "Command-line interface to the DocumentAlchemy API.",
   "keywords"               : ["document","convert","screen capture","thumbnail","watermark","PDF","Microsoft Office","MS Word","docx","MS Excel","xlsx","MS PowerPoint","pptx","command line","terminal"],
   "homepage"               : "https://documentalchemy.com",
@@ -11,7 +11,7 @@
   "license"                : "MIT",
   "main"                   : "lib/index.js",
   "scripts"                : {"test": "make test" },
-  "directories"            : { "lib":"lib", "bin":"bin", "doc":"docs" },
+  "directories"            : { "lib":"lib", "bin":"bin" },
   "preferGlobal"           : true,
   "dependencies": {
     "inote-util"               : "^0.9",
