add image transform command and related documentation; bump version to 1.1.0

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name"                   : "document-alchemy-cli",
-  "version"                : "1.0.3",
+  "version"                : "1.1.0",
   "app-name"               : "document-alchemy",
-  "published"              : "17 April 2016",
+  "published"              : "20 April 2016",
   "description"            : "Command-line interface to the DocumentAlchemy API.",
-  "keywords"               : ["document","convert","screen capture","thumbnail","watermark","PDF","Microsoft Office","MS Word","docx","MS Excel","xlsx","MS PowerPoint","pptx","command line","terminal"],
+  "keywords"               : ["document","convert","screen capture","thumbnail","transform","PDF","Microsoft Office","MS Word","docx","MS Excel","xlsx","MS PowerPoint","pptx","command line","terminal"],
   "homepage"               : "https://documentalchemy.com",
-  "bugs"                   : "https://github.com/document-alchemy-cli/issues",
+  "bugs"                   : "https://github.com/documentalchemy/document-alchemy-cli/issues",
   "repository"             : { "type":"git", "url":"https://github.com/documentalchemy/document-alchemy-cli.git" },
   "license"                : "MIT",
   "main"                   : "lib/index.js",
